test/corpus/main.txt
===================================
Lists
===================================
<#list>
  <#items names as name>
    <#assign theirName = name />
  </#items>
</#list>
---
(source_file
  (directive
    (list
      (list_middle
        (items
          (parameter_group
            (as_expression
              (type
                (top_level))
              (as)
              (type
                (top_level))))
          (items_middle
            (directive
              (assign
                (parameter_group
                  (expression
                    (type
                      (top_level))
                    (operator)
                    (type
                      (top_level))))
                (parameter_group
                  (expression
                    (operator)))))))))))
